--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.PRIVATE_KEY }}" > ~/.ssh/my-key.pem
-          chmod 600 ~/.ssh/my-aws-key.pem
+          chmod 600 ~/.ssh/my-key.pem
 
       - name: Run Ansible Playbook
         run: |
