--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,11 @@ jobs:
       - name: Configure SSH Key
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.PRIVATE_KEY }}" > ~/.ssh/my-key.pem
+          echo "${{ secrets.PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/my-key.pem
           chmod 600 ~/.ssh/my-key.pem
+          ssh-keygen -y -f ~/.ssh/my-key.pem > ~/.ssh/my-key.pub || echo "Invalid key"
 
       - name: Run Ansible Playbook
         run: |
           cd ansible-setup
-          export ANSIBLE_HOST_KEY_CHECKING=False
           ansible-playbook -i inventory nginx-setup.yml
